# video

./: .gitignore  .jshintrc  .travis.yml  .ybow  Application.hs  Foundation.hs  Import.hs  LICENSE  Model.hs  Permissions.hs  README.md  Settings.hs  TOOD.md  TestEr.hs  Types.hs  bower.json  build.sh  case.md  clu  push.sh  setSandbox.sh  stack.yaml  test.sh  video.cabal  ybow
.halcyon/: constraints  extra-os-packages  extra-source-hash-ignore  sandbox-extra-apps  sandbox-extra-configure-flags  sandbox-sources
Data/: CMap.hs
Data/Binary/: Enum.hs
Database/Neo/: Cypher.hs  Monad.hs  NeoNode.hs  NeoResponse.hs  Rest.hs  Transactions.hs  Utils.hs
Google/Api/: Kinds.hs  Scope.hs  Transport.hs  Types.hs  Utils.hs
Google/Api/Mirror/: Contact.hs  Location.hs  Setting.hs  Subscription.hs  Timeline.hs  TimelineValidator.hs
Google/Api/Types/: GoogleUser.hs  Token.hs
Google/Api/Youtube/: Activities.hs  ChannelBanners.hs  ChannelSections.hs  Channels.hs  Common.hs  GuideCategories.hs  I18nLanguages.hs  I18nRegions.hs  PlaylistItems.hs  Playlists.hs  Search.hs  Subscriptions.hs  Thumbnails.hs  VideoCategories.hs  Videos.hs  Watermarks.hs  populate.sh
Handler/: Common.hs  DB.hs  DBRaw.hs  Home.hs  OAuth2.hs  Translate.hs  User.hs
Import/: NoFoundation.hs
Network/HTTP/: ClientExtra.hs  OAuth2.hs
Network/HTTP/ClientExtra/: Class.hs  Multipart.hs  Types.hs
Network/HTTP/OAuth2/: Types.hs
Settings/: StaticFiles.hs
SubSite/: Data.hs  Import.hs  OAuth2.hs
Types/: ConnPoolRaw.hs  Lang.hs  MsgBus.hs  Persistent.hs  VideoTag.hs
Yesod/Auth/: Facebook2.hs  GoogleEmail3.hs
Yesod/WebSockets/: Extra.hs
angular/: OAuth2.hamlet  admin.hamlet  admin.julius  chat.hamlet  chat.julius  demos.hamlet  demos.julius  demos.lucius  empty.hamlet  login.julius  logout.julius  menu.hamlet  oauth2.hamlet  oauth2.julius  site.hamlet  site.julius  site.lucius
angular/Controlers/: LeftCtrl.coffee  LeftCtrl.julius
angular/Directive/: youtubeVideo.julius
angular/Filters/: splitChars.julius
angular/Service/: youtubeEmbedUtils.julius
angular/_lib/Controlers/: AppCtrl.julius  LeftCtrl.coffee  LeftCtrl.julius  RightCtrl.julius
angular/_lib/Directive/: youtubeVideo.julius
angular/_lib/Filters/: splitChars2.coffee
angular/_lib/Service/: youtubeEmbedUtils.julius
angular/admin/: allusers.hamlet  allusers.julius  group.hamlet  group.julius  group.lucius  user.hamlet  user.julius  video.hamlet  video.julius
angular/admin/group/: add.hamlet  add.julius  edit.hamlet  edit.julius  user.hamlet  user.julius  user.lucius
angular/admin/user/: add.AT.hamlet  add.AT.julius  add.hamlet  add.julius  edit.AT.hamlet  edit.AT.julius  edit.hamlet  edit.julius  video.AT.hamlet  video.AT.julius
angular/demos/: about.hamlet  about.julius  button.hamlet  button.julius  checkbox.hamlet  checkbox.julius  content.hamlet  content.julius  dialog.hamlet  dialog.julius  panel.hamlet  panel.lucius  slider.hamlet  slider.julius  slider.lucius  textfield.hamlet  textfield.julius  textfield.lucius  youtube.hamlet  youtube.import  youtube.julius
angular/oauth2/: channels.AT.hamlet  channels.AT.julius  channels.hamlet  channels.julius  playlist.AT.hamlet  playlist.AT.julius  playlist.hamlet  playlist.julius  playlists.AT.hamlet  playlists.AT.julius  playlists.hamlet  playlists.julius  refresh.AT.hamlet  video.AT.hamlet  video.AT.julius  video.hamlet  video.julius
angular/settings/: me.AT.hamlet  me.AT.julius  me.AT.lucius  theme.AT.hamlet  theme.AT.julius  video.AT.hamlet  video.AT.julius  video.AT.lucius
angular/site/: playlists.AT.hamlet  playlists.AT.julius
angular/site/playlists/: detail.AT.hamlet  details.AT.hamlet  details.AT.julius
app/: devel.hs
client/: boot.hs  boot.me  build.sh  build2.sh  clean.sh  devel.sh  extra-lib.txt  reflex-todomvc.cabal  stack-base.yaml  stack.yaml  style.css  video-client.cabal
client/app/: Main.hs
client/src/Reflex/: TodoMVC.hs
client/src/Reflex/Material/: MdIcon.hs
client/src/Reflex/Material/Core/: Ripple.hs
config/: models  routes  settings.yml  t.yaml
dbsetup/: functions.sql
fix/bower_components/polymer/: bower.json
messages/: de.msg  en.msg  fr.msg  pl.msg
server/: Application.hs  Foundation.hs  Import.hs  Settings.hs  Types.hs  stack.yaml  video.cabal
server/Data/Binary/: JS.hs
server/Handler/: DB.hs  DBRaw.hs  Home.hs  OAuth2.hs  User.hs
server/Import/: NoFoundation.hs
server/SQL/: getUserPlaylistsGroupItemsR.sql  getUserPlaylistsGroupR.sql  getUserPlaylistsItemsR.sql
server/Types/: MsgBus.hs  VideoTag.hs
server/Yesod/Auth/: GoogleEmail3.hs
server/angular/: chat.hamlet  chat.julius  demos.hamlet  login.lucius  settings.hamlet  site.hamlet
server/angular/admin/: group.julius  group.lucius  user.hamlet  video.hamlet  video.julius
server/angular/demos/: about.hamlet  about.julius  button.hamlet  button.julius  button.lucius  card.hamlet  checkbox.hamlet  checkbox.lucius  content.hamlet  dialog.hamlet  dialog.lucius  list.hamlet  panel.julius  panel.lucius  slider.hamlet  slider.julius  textfield.hamlet  (+2 more)
server/config/: extra-settings-example.yml  models  routes  settings.yml
server/cucumber/: navigation.feature
server/messages/: en.msg  ru.msg
server/static/: app.css  app.min.css  app.min.js
server/templates/: uiEntry.hamlet  v2.hamlet
setup/: install-java.sh  install-node.sh
src/: Application.hs  Foundation.hs  Model.hs  Permissions.hs  Settings.hs  TestEr.hs  Types.hs
src/Data/: CMap.hs
src/Handler/: DB.hs  Home.hs  OAuth2.hs  Translate.hs  User.hs
src/Import/: NoFoundation.hs
src/Settings/: StaticFiles.hs
src/Types/: Lang.hs  MsgBus.hs
static/: angular-material.css  app.css  app.min.css  app.min.js  app.min.map  bootstrap-fonts.css  font-awesome.css  font-tools.css  themes.css  vulcanized.js
static/angular-i18n/: .bower.json  md5sum.list
static/css/: bootstrap-fonts.css  font-awesome.css
static/polymer/: .bower.json  bower.json
templates/: angular-layout-wrapper.hamlet  angularUI-wrapper.hamlet  default-layout-wrapper.hamlet  login.hamlet  login.lucius  uiEntry.hamlet  uiEntry.lucius
(+31 files in other folders)
