name:              video
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple
homepage:            https://github.com/tolysz/video
bug-reports:         https://github.com/tolysz/video/issues
license:             BSD3
license-file:        LICENSE

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Types
                     Permissions
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.User
                     Handler.OAuth2
                     Handler.DB
                     Handler.DBRaw
                     Handler.Translate
                --  maybe a package
                     Data.CMap
                     Types.MsgBus
                     Types.Lang
                     Types.Persistent

                --  move to a separate module after testing or merge with http-client?
                  -- binary-js
                     Data.Binary.JS
                  -- binary-enum
                     Data.Binary.Enum
                  -- patch yesod google auth
                     Yesod.Auth.GoogleEmail3
                     Yesod.Auth.Facebook2
                  -- wait pull -- https://github.com/yesodweb/yesod/pull/772
--                  transformers
                  -- separare neo4j library
                     Database.Neo.Monad
--                     Database.Neo.Types
                     Database.Neo.Rest
                     Database.Neo.Utils
                     Database.Neo.NeoNode
                     Database.Neo.NeoResponse
                     Database.Neo.Cypher

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                LambdaCase

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.1      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0.3    && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-postgresql         >= 2.1.1      && < 2.2
                 , esqueleto
                 , postgresql-simple
                 , postgresql-simple-typed
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , yesod-angular-ui
                 , rawstring-qm
                 , blaze-html
                 , possible
                 , haxl
                 , auto-update
                 , lens
                 , lens-aeson
                 , stm
                 , yesod-websockets
                 , yesod-websockets-extra
                 , websockets
                 , transformers
                 , fb
                 , yesod-fb
                 , yesod-auth-fb
                 , wai
                 , utf8-string
                 , async
                 , google-api
                 , http-client-extra
                 , http-client-extra-oauth2
                 , uuid
                 , blaze-markup
               -- CMap
                 , stm-containers
                 , list-t
                 , focus
               -- Msg
                 , binary
                 , singletons
               -- binary-js
                 , jmacro
                 , generics-sop
               -- binary-enum
                 , binary
               -- yesod google auth
                 , random
                 , http-types
                 , mime-mail
                 , http-client
                 , conduit-extra
                 , blaze-builder
               -- wait pull -- https://github.com/yesodweb/yesod/pull/772
                 , enclosed-exceptions
               -- neo4j
                 , mtl


executable         video
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, video

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , video
                 , yesod-test >= 1.4.2 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mongoDB
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , classy-prelude
                 , classy-prelude-yesod
