name:              video
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple
homepage:            https://github.com/tolysz/video
bug-reports:         https://github.com/tolysz/video/issues
license:             BSD3
license-file:        LICENSE

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs:
      src
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Types
                     Permissions
                     Settings
                     Settings.StaticFiles
                     Handler.Common
                     Handler.Home
                     Handler.User
                     Handler.OAuth2
                     Handler.DB
                     Handler.DBRaw
                     Handler.Translate
                --  maybe a package
                     Data.CMap
                     Types.MsgBus
                     Types.Lang
                     Types.Persistent
                     Types.ConnPoolRaw
                     Types.VideoTag

                --  move to a separate module after testing or merge with http-client?
                  -- binary-js
                     Data.Binary.JS
                  -- binary-enum
                     Data.Binary.Enum
                  -- patch yesod google auth
                     Yesod.Auth.GoogleEmail3
                     Yesod.Auth.Facebook2
                  -- wait pull -- https://github.com/yesodweb/yesod/pull/772
--                  transformers
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2
--        ghc-options:   -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                LambdaCase

    build-depends: base                          >= 4
                 , yesod                         >= 1.6
                 , yesod-core                    >= 1.6
                 , yesod-auth                    >= 1.6
                 , yesod-static                  >= 1.6
                 , yesod-form                    >= 1.6
                 , classy-prelude                >= 0.10.2
                 , classy-prelude-conduit        >= 0.10.2
                 , classy-prelude-yesod          >= 0.10.2
                 , bytestring                    >= 0.9
                 , text                          >= 0.11
                 , persistent                    >= 2.0      
                 , persistent-postgresql         >= 2.1.1     
                 , esqueleto
                 , postgresql-simple
                 , postgresql-simple-typed
                 , persistent-template           >= 2.0
                 , template-haskell
                 , shakespeare                   >= 2.0
                 , hjsmin                        >= 0.1
                 , monad-control
                 , wai-extra                     >= 3.0      
                 , yaml                          >= 0.8
                 , http-conduit                  >= 2.1
                 , directory                     >= 1.1
                 , warp                          >= 3.0        
                 , data-default
                 , aeson
--                 == 0.8.0.2
                 , conduit                       >= 1.0
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 2.2        
                 , wai-logger                    >= 2.2       
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , yesod-angular-ui
                 , rawstring-qm
                 , blaze-html
                 , possible
                 , haxl
                 , auto-update
                 , lens
                 , lens-aeson
                 , stm
                 , yesod-websockets
--                 , yesod-websockets-extra
                 , websockets
                 , transformers
                 , fb
                 , yesod-fb
                 , yesod-auth-fb
                 , wai
                 , utf8-string
                 , async
                 , google-api
                 , http-client-tls
                 , http-client-extra
                 , http-client-extra-oauth2
                 , uuid
                 , blaze-markup
                 , process
                 , wai-cors
                 , connection
                 , smtps-gmail
                 , mime-mail
               -- CMap
                 , stm-containers
                 , list-t
                 , focus
               -- Msg
                 , binary
                 , singletons
               -- binary-js
                 , jmacro
                 , generics-sop
               -- binary-enum
                 , binary
               -- yesod google auth
                 , random
                 , http-types
                 , mime-mail
                 , http-client
                 , conduit-extra
                 , blaze-builder
                 , resourcet
               -- neo4j
                 , rest-neo
               -- db pools
                 , resource-pool
                 , yesod-auth-oauth2


executable         video
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, video

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections

    build-depends: base
                 , video
                 , yesod-test >= 1.4.2 
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-mongoDB
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
                 , classy-prelude
                 , classy-prelude-yesod
