name:              video-client
version:           0.0.1
cabal-version:     >= 1.8
build-type:        Simple
homepage:            https://github.com/tolysz/video
bug-reports:         https://github.com/tolysz/video/issues
license:             BSD3
license-file:        LICENSE

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
--    exposed-modules: Application
                  -- wait pull -- https://github.com/yesodweb/yesod/pull/772
--                  transformers
    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs -O2
--        ghc-options:   -fwarn-tabs -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                ViewPatterns
                TupleSections
                RecordWildCards
                LambdaCase

    build-depends: base                          >= 4          && < 5
executable         video
    if flag(library-only)
        Buildable: False

    main-is:           Main.hs
    hs-source-dirs:    app
    build-depends:     base
                 , mtl
                 , transformers
                 , reactive-banana
                 , ghcjs-dom
                 , francium

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N
